--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -7,3 +7,32 @@
 @import "tailwindcss/base";
 @import "tailwindcss/components";
 @import "tailwindcss/utilities";
+
+html, body{
+    @apply min-h-full h-full;
+}
+
+.button{
+    @apply inline-flex justify-center py-2 px-4 border border-transparent shadow-sm text-sm font-medium rounded-md focus:outline-none focus:ring-2 focus:ring-offset-2;
+    &-default{
+        @apply text-white bg-indigo-600 hover:bg-indigo-700 focus:ring-indigo-500;
+    }
+    &-primary{
+        @apply text-white bg-gray-600 hover:bg-gray-700 focus:ring-gray-500;
+    }
+    &-danger{
+        @apply text-white bg-red-600 hover:bg-red-700 focus:ring-red-500;
+    }
+    &-xs{
+        @apply py-1 px-2 text-xs;
+    }
+}
+
+.form{
+    &-label{
+        @apply block text-sm font-medium text-gray-700;
+    }
+    &-element{
+        @apply mt-1 focus:ring-indigo-500 focus:border-indigo-500 block w-full shadow-sm sm:text-sm border-gray-300 rounded-md;
+    }
+}
