--- a/public/css/app.css
+++ b/public/css/app.css
@@ -31515,6 +31515,26 @@ html, body {
   color: rgba(255, 255, 255, var(--tw-text-opacity));
 }
 
+.button-success {
+  --tw-bg-opacity: 1;
+  background-color: rgba(5, 150, 105, var(--tw-bg-opacity));
+}
+
+.button-success:hover{
+  --tw-bg-opacity: 1;
+  background-color: rgba(4, 120, 87, var(--tw-bg-opacity));
+}
+
+.button-success:focus{
+  --tw-ring-opacity: 1;
+  --tw-ring-color: rgba(239, 68, 68, var(--tw-ring-opacity));
+}
+
+.button-success{
+  --tw-text-opacity: 1;
+  color: rgba(255, 255, 255, var(--tw-text-opacity));
+}
+
 .button-xs {
   font-size: 0.75rem;
   line-height: 1rem;
@@ -31522,6 +31542,12 @@ html, body {
   padding-bottom: 0.25rem;
   padding-left: 0.5rem;
   padding-right: 0.5rem;
+}
+
+.swal2-popup {
+  --tw-shadow: 0 25px 50px -12px rgba(0, 0, 0, 0.25);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+  padding: 5em;
 }
 
 .form-label {
